[gd_scene load_steps=7 format=3 uid="uid://bip87oin8clme"]

[ext_resource type="Script" path="res://Projects/Ui/gameplay_ui.gd" id="1_clwfc"]
[ext_resource type="PackedScene" uid="uid://b2isxa0mvvipm" path="res://Projects/Ui/power_meter.tscn" id="1_mqmx6"]
[ext_resource type="PackedScene" uid="uid://pxqrvonok1lr" path="res://Projects/Garrison/garrison.tscn" id="2_usbfr"]
[ext_resource type="PackedScene" uid="uid://dm5shbg7n5s3k" path="res://Projects/Ui/Decision/decision.tscn" id="5_ax0dm"]
[ext_resource type="PackedScene" uid="uid://fft0owblymrl" path="res://Projects/Ui/dialog_system.tscn" id="5_xeg13"]
[ext_resource type="PackedScene" uid="uid://dehksgitrkv53" path="res://Projects/Support/card_slots.tscn" id="6_h3dqn"]

[node name="GameplayUI" type="CanvasLayer"]
script = ExtResource("1_clwfc")

[node name="PowerMeter" parent="." node_paths=PackedStringArray("garrison") instance=ExtResource("1_mqmx6")]
offset_left = 616.0
offset_top = 75.0
offset_right = 616.0
offset_bottom = 75.0
garrison = NodePath("../Garrison")
energy = 100.0

[node name="Garrison" parent="." instance=ExtResource("2_usbfr")]
offset_left = 402.0
offset_top = -90.0
offset_right = 402.0
offset_bottom = -90.0

[node name="Decision" parent="." instance=ExtResource("5_ax0dm")]
visible = false

[node name="DialogSystem" parent="." instance=ExtResource("5_xeg13")]
visible = false

[node name="CardSlots" parent="." instance=ExtResource("6_h3dqn")]
offset_left = -711.0
offset_right = -711.0

[connection signal="card_selected" from="Garrison" to="." method="_on_garrison_card_selected"]
